--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-jPage v0.9 - A dynamic settings library with jQuery
+jSettings v1.1 - A dynamic settings library with jQuery
 Depends: jQuery >= 1.5
 
-Copyright (C) 2013 Alex Scheel
+Copyright (C) 2013,2014 Alex Scheel
 All rights reserved.
 Licensed under BSD 2 Clause License:
 
@@ -59,20 +59,33 @@ API:
     
     setLabels(true|false) - Show labels?
     
+    setBindHandler(handler) - Called before binds
+    
+    setUnbindHandler(handler) - Called before unbinds
+    
+    showSettings(),hideSettings() - Show/hide settings element
+    
   Internal:
     Data loading:
       getData()
+      getDataFromSetting()
       pushData()
+      pushDataFromSetting()
       saveData()
+      saveDataFromSetting()
       loadData()
+      loadDataFromSetting()
       
     Events:
       eventTriggerSave(event)
       bindEvents()
+      bindEventsFromSetting()
       unbindEvents()
+      unbindEventsFromSetting()
       
     Display:
       getSettings() 
+      getElement() 
       loadSettings()
     
     unhex(text)
